# oop-final-project

./: CMakeLists.txt  README.md  airline.cpp  airline.h  build.bat  flights.csv  solver.cpp  solver.h
docs/: report.md
include/: airline.h  log.h  solver.h
sources/: airline.cpp  main.cpp  solver.cpp
tests/: generate.bat  generator.cpp  test1.csv
